# scoremaster

./: .gitignore  CMakeLists.txt  KeyboardSimulator.cpp  LICENSE  PRIVACY.md  README.md  ResourceLocator.h  ScoreboardController.cpp  ScoreboardController.h  ScoreboardState.h  configure.sh  main.cpp
.github/workflows/: release.yml
display/: ColorLightDisplay.cpp  ColorLightDisplay.h  DoubleFramebuffer.cpp  DoubleFramebuffer.h  IDisplay.h  SFMLDisplay.cpp  SFMLDisplay.h
puckpulse-app/android/: .gitignore
puckpulse-app/android/app/: build.gradle.kts
puckpulse-app/android/app/src/main/kotlin/com/puckpulse/: MainActivity.kt
puckpulse-app/android/fastlane/: Appfile
scoreboard-app/: pubspec.yaml
scoreboard-app/android/app/src/main/: AndroidManifest.xml
scoreboard-app/lib/: discovery_dialog.dart  main.dart  scoreboard_control_page.dart  scoreboard_state.dart  team_configuration_page.dart  team_model.dart  web_socket_service.dart
scoreboard-app/linux/: CMakeLists.txt
scoreboard-app/linux/runner/: my_application.cc
scoreboard-system/: CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.h  GoalCelebrationRenderer.cpp  KeyboardSimulator.cpp  KeyboardSimulator.h  NetworkManager.cpp  NetworkManager.h  ResourceLocator.cpp  ScoreboardController.cpp  ScoreboardRenderer.cpp  ScoreboardRenderer.h  ScoreboardState.h  TeamManager.cpp  TeamManager.h  WebSocketManager.cpp  WebSocketManager.h  main.cpp
scoreboard-system/display/: ColorLightDisplay.cpp  ColorLightDisplay.h  DoubleFramebuffer.h  SFMLDisplay.cpp  SFMLDisplay.h
scoreboard-system/packaging/: hockey-scoreboard.service  postinst  preinst
scoremaster-app/: README.md  pubspec.yaml
scoremaster-app/android/app/: build.gradle.kts
scoremaster-app/android/app/src/main/: AndroidManifest.xml
scoremaster-app/android/app/src/main/kotlin/com/example/scoreboard_app/: MainActivity.kt
scoremaster-app/assets/: README.md
scoremaster-app/ios/Runner/: Info.plist
scoremaster-app/ios/Runner.xcodeproj/: project.pbxproj
scoremaster-app/lib/: discovery_dialog.dart  mqtt_service.dart  scoreboard_control_page.dart  team_model.dart
scoremaster-app/linux/: CMakeLists.txt
scoremaster-app/linux/runner/: my_application.cc
scoremaster-app/test/: widget_test.dart
scoremaster-app/web/: index.html
scoremaster-controller/: CHANGELOG.md  CMakeLists.txt  CommandLineArgs.cpp  README.md  ScoreboardController.cpp  ScoreboardController.h  main.cpp
scoremaster-controller/display/: SFMLDisplay.h
scoremaster-controller/network/: NetworkManager.cpp
scoremaster-controller/packaging/: config  postinst  scoremaster-controller.service  scoremaster-update.service  scoremaster-update.sh  scoremaster-update.timer
